# moviemovie

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/: V1__initial.sql
src/: db.rs  main.rs  tmdb.rs
