[package]
name = "moviemovie"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
flate2 = "1.1.1"
reqwest = "0.12.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.8.22"
